# vgen

./: .env  .gitignore  README.md  cleaned.json  high_level_planning_task.md  pyproject.toml  report.md  requirements.txt
src/vgen/: __init__.py  api.py  config.py  crew.py  main.py  run_api.py  subtsk.py
src/vgen/config/: agents.yaml  tasks.yaml
src/vgen/static/: index.html
src/vgen/tools/: custom_tool.py
src/vgen/utils/: markdown_to_json.py
